fixed paragraph spacing in about page

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -51,7 +51,7 @@ h4 {
 .privacyText {
 	font-family: Quicksand;
 	font-size: 100%;
-	padding-top: 15px;
+	padding-top: 0px;
 	margin-left: 5%;
 	margin-right: 5%;
 }
